--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -14,25 +14,25 @@
   }
 
   :root {
-    --background: 50 100% 97%;
+    --background: 60 100% 96%;
     --foreground: 222.2 84% 4.9%;
 
-    --card: 48 100% 98%;
+    --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
 
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 0 84% 60%;
+    --primary: 0 90% 56%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 214 84% 56%;
+    --secondary: 220 100% 60%;
     --secondary-foreground: 210 40% 98%;
 
-    --muted: 0 0% 98%;
+    --muted: 50 100% 90%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 318 82% 63%;
+    --accent: 120 80% 65%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 84.2% 60.2%;
@@ -50,7 +50,7 @@
   }
 
   [data-theme='dark'] {
-    --background: 0 0% 0%;
+    --background: 240 5% 10%;
     --foreground: 210 40% 98%;
 
     --card: 0 0% 4%;
@@ -59,16 +59,16 @@
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
+    --primary: 0 90% 60%;
     --primary-foreground: 222.2 47.4% 11.2%;
 
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 220 100% 70%;
     --secondary-foreground: 210 40% 98%;
 
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 120 80% 70%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
@@ -100,4 +100,19 @@ html {
 html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
+}
+
+@keyframes float-up {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100vh);
+    opacity: 0;
+  }
+}
+
+.balloon {
+  animation: float-up 4s linear forwards;
 }
